--- a/meltano.yml
+++ b/meltano.yml
@@ -3,6 +3,13 @@ default_environment: dev
 project_id: 46d060a7-a1a7-4664-bb11-d7ec7b6597fa
 environments:
 - name: dev
+  config:
+    plugins:
+      extractors:
+      - name: tap-instagram
+        select:
+        - 'users.*'
+        - 'user_insights_followers.*'
 - name: staging
 - name: prod
 plugins:
@@ -17,8 +24,7 @@ plugins:
   transformers:
   - name: dbt
     variant: dbt-labs
-    pip_url: dbt-core~=1.7.0 dbt-postgres~=1.7.0 dbt-snowflake~=1.7.0 dbt-bigquery~=1.7.0
-      certifi==2025.1.31
+    pip_url: dbt-core~=1.7.0 dbt-postgres~=1.7.0 dbt-snowflake~=1.7.0 dbt-bigquery~=1.7.0 certifi==2025.1.31
   files:
   - name: files-dbt
     variant: matatika
