--- a/meltano.yml
+++ b/meltano.yml
@@ -15,8 +15,8 @@ environments:
 plugins:
   extractors:
   - name: tap-instagram
-    variant: voxmedia
-    pip_url: tap-instagram
+    variant: matatika
+    pip_url: git+https://github.com/Matatika/tap-instagram
   loaders:
   - name: target-postgres
     variant: matatika
@@ -27,8 +27,7 @@ plugins:
   transformers:
   - name: dbt
     variant: dbt-labs
-    pip_url: dbt-core~=1.7.0 dbt-postgres~=1.7.0 dbt-snowflake~=1.7.0 dbt-bigquery~=1.7.0
-      certifi==2025.1.31
+    pip_url: dbt-core~=1.7.0 dbt-postgres~=1.7.0 dbt-snowflake~=1.7.0 dbt-bigquery~=1.7.0 certifi==2025.1.31
   files:
   - name: files-dbt
     variant: matatika
